[package]
name = "rust-gpio-001"
version = "0.1.0"
authors = ["ffespechen <flavio.espechenieva@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = "0.48.0"
esp-idf-hal = "0.43.0"
# embedded-hal = "1"
# embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
# embedded-hal-nb = "1"
# embedded-io = "0.6"
esp-idf-sys = { version = "0.34", default-features = false }

[build-dependencies]
embuild = "0.31.3"
